
*** New GTK-native launch mode.
For better Wayland support, the pgtk toolkit exposes a new
'x-gtk-launch-uri' browse-url handler and uses it by default when URLs
are browsed from a PGTK frame.  For other frames, we fall back to the
default URL launch function.  This change allows us to properly raise
browser windows under Wayland using the xdg_activation_v1 protocol.

*** Removed support for some obsolete web browsers.
Conkeror (obsolete since Emacs 28.1), gnome-moz-remote (obsolete since
Emacs 25.1), and gnudoit (obsolete since Emacs 25.1).

** CL-Lib

+++
*** Derived types (i.e. 'cl-deftype')  can now be used as method specializers.
As part of this new support, the new function 'cl-types-of' returns
the list of types to which a value belongs.

+++
*** Some cl-lib functions and macros are now built-in.
These functions or macros have been added to Emacs Lisp, and the old
names are now aliases for the built-in equivalents:

- 'cl-incf'   renamed to 'incf'
- 'cl-decf'   renamed to 'decf'
- 'cl-oddp'   renamed to 'oddp'
- 'cl-evenp'  renamed to 'evenp'
- 'cl-plusp'  renamed to 'plusp'
- 'cl-minusp' renamed to 'minusp'

The old names are considered deprecated, and will be marked as obsolete
in some future release.

+++
*** 'cl-labels' now also accepts '(FUNC EXP)' bindings, like 'cl-flet'.
Such bindings make it possible to compute which function to bind to FUNC.

---
*** 'cl-block' names are now lexically scoped, as documented.

+++
*** 'cl-locally' is now obsolete.
It is an alias for the 'progn' special-form.

+++
*** 'cl-declare' is now obsolete; use 'defvar' instead.

+++
*** 'cl-gensym' is now obsolete; use 'gensym' instead.

+++
*** New macro 'cl-with-accessors'.
This macro is similar to 'with-slots', but uses accessor functions
instead of slot names.  It is useful when slots' accessor functions are
used repeatedly, such as reading from a slot and then writing to that
slot.  Symbol macros are created for the accessor functions using