@@ -146,6 +146,7 @@ and `shell-dirtrack-mode'."
 
 (defvar-keymap ansi-osc-hyperlink-map
   :doc "Keymap used by OSC 8 hyperlink buttons."
+  "RET"           (browse-url-keymap-bind #'browse-url-button-open)
   "C-c RET"       #'browse-url-button-open
   "<mouse-2>"     #'browse-url-button-open
   "<follow-link>" 'mouse-face)
